fix margin collapsing issues

--- a/001_first_website/styles/full-week.css
+++ b/001_first_website/styles/full-week.css
@@ -4,18 +4,24 @@ header {
 
 h1 {
   font-size: 48px;
-  margin: 12px 0;
+  margin: 16px 0;
 }
 
 #description {
+  margin-top: 0;
   margin-bottom: 36px;
 }
 
 a {
   background-color: rgb(167, 1, 78);
   color: #fff;
+  font-size: 24px;
+
   border-radius: 4px;
-  padding: 5px 8px;
+  padding: 12px 48px;
+  margin: 12px 0px;
+
+  display: inline-block;
 }
 
 a:hover {
